--- a/android/packages/apps/Calculator/AndroidManifest.xml
+++ b/android/packages/apps/Calculator/AndroidManifest.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.calculator2">
+    package="com.android.calculator2"
+    coreApp="true"
+    android:sharedUserId="android.uid.system">
 
     <original-package android:name="com.android.calculator2" />
 
+	<uses-permission android:name="android.permission.ACCESS_CHECKIN_PROPERTIES"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    
     <application android:label="@string/app_name" android:icon="@mipmap/ic_launcher_calculator">
         <activity android:name="Calculator" 
                   android:theme="@android:style/Theme.Holo.NoActionBar"
