add axp internal temperature sensor support

--- a/lichee/linux-3.4/arch/arm/configs/sun7ismp_android_defconfig
+++ b/lichee/linux-3.4/arch/arm/configs/sun7ismp_android_defconfig
@@ -1538,6 +1538,7 @@ CONFIG_AXP_CHARGEINIT=y
 CONFIG_AXP_CHGCHANGE=y
 CONFIG_AW_AXP20_COU=y
 # CONFIG_AW_AXP20_OCV is not set
+CONFIG_AXP_HWMON=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 # CONFIG_PDA_POWER is not set
 # CONFIG_TEST_POWER is not set
