--- a/lichee/linux-3.4/drivers/power/axp_power/Kconfig
+++ b/lichee/linux-3.4/drivers/power/axp_power/Kconfig
@@ -48,4 +48,9 @@ config AXP_CHGCHANGE
 
 #endchoice
 
+config AXP_HWMON
+        depends on HWMON
+        tristate "Enable the axp internal thermal monitoring support of AXP20X chips"
+        default y
+
 endif # !AW_AXP
