--- a/android/device/softwinner/wing-common/init.rc
+++ b/android/device/softwinner/wing-common/init.rc
@@ -4,9 +4,9 @@
 # This is a common source of Android security bugs.
 #
 
-#import /init.trace.rc
 import /init.usb.rc
 import /init.${ro.hardware}.rc
+import /init.trace.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
